<resources>

    <!-- ************************************ -->
    <string name="app_name">Assignment 2</string>
    <string name="title_activity_maps">Map</string>
    <string name="popup_cancel">Cancel</string>
    <string name="group_name">Group name</string>
    <!-- ************************************ -->

    <!-- String tags related to RecyclerView -->
    <string name="list_popup_name">Name</string>
    <string name="list_popup_unsubscribe">Unsubscribe</string>
    <string name="list_popup_title">Type your name</string>
    <!-- *********************************** -->

    <!-- String tags related to popup menu in GMap -->
    <string name="map_popup_title">Choose a group</string>
    <!-- ***************************************** -->

    <!-- String tags related to DrawerLayout -->
    <string name="drawer_open">Drawer_Opened</string>
    <string name="drawer_closed">Drawer_Closed</string>
    <!-- *********************************** -->

    <!-- String tags related to DrawerPopUp -->
    <string name="drawer_popup_title">Create group</string>
    <string name="drawer_popup_group">Group name</string>
    <string name="drawer_popup_add">Create</string>
    <string name="drawer_popup_nickname">Nickname</string>
    <!-- ********************************** -->

    <!-- String tags related to NavigationMenu -->
    <string name="menu_add">Add Group</string>
    <string name="menu_gmap">Google Maps</string>
    <string name="menu_swe">Swe</string>
    <string name="menu_eng">Eng</string>
    <string name="menu_groups">My groups</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- ************************************* -->

</resources>
